[gd_scene load_steps=5 format=3 uid="uid://datyn7j67bbd7"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_gpxii"]
[ext_resource type="Script" path="res://Enemy/detection_range.gd" id="2_ni1g3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fb34a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xpny4"]
radius = 143.087

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_gpxii")

[node name="FlipDirection" type="Node2D" parent="."]

[node name="EnemyCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_fb34a")

[node name="DetectionRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("2_ni1g3")

[node name="DetectionCollision" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("CircleShape2D_xpny4")
debug_color = Color(0.66397, 0.512569, 0, 0.42)

[connection signal="body_entered" from="DetectionRange" to="DetectionRange" method="_on_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="DetectionRange" method="_on_body_exited"]
